tests/TraceProof.lean.expected
tests/TraceProof.lean:13:2: warning: aesop: failed to prove the goal after exhaustive search.
tests/TraceProof.lean:12:15: error: unsolved goals
α : Sort ?u.5
⊢ α
[aesop.proof] <no proof>
